chore: get player by team id
